--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,14 @@
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/icon?family=Material+Icons"
 		/>
+
+		<!-- FONTS -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Alata&family=Roboto:wght@300&display=swap"
+			rel="stylesheet"
+		/>
 		<title>React App</title>
 	</head>
 	<body>
